--- a/astronomy-picture/src/components/PictureListItem/PictureListItem.module.css
+++ b/astronomy-picture/src/components/PictureListItem/PictureListItem.module.css
@@ -1,7 +1,7 @@
 .list-item {
     display: flex;
     max-width: 100%;
-    background: grey;
+    background: gray;
     border-radius: 20px;
 }
 
@@ -19,12 +19,14 @@
 }
 
 .button {
+    border-radius: 5px;
     width: 100px;
     height: 30px;
-    color: white;
     border: none;
+    font-family: Arial;
 }
 
 .button:hover {
-    border: 1px solid black;
+    background: lightblue;
+    cursor: pointer;
 }
