--- a/astronomy-picture/src/components/PictureList/PictureList.module.css
+++ b/astronomy-picture/src/components/PictureList/PictureList.module.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: nowrap;
     gap: 10px;
     max-width: 100%;
 }
