--- a/astronomy-picture/src/components/PictureListItem/PictureListItem.module.css
+++ b/astronomy-picture/src/components/PictureListItem/PictureListItem.module.css
@@ -1,7 +1,7 @@
-.list-item {
+.item {
     display: flex;
     max-width: 100%;
-    background: gray;
+    background: #808080;
     border-radius: 20px;
 }
 
