--- a/astronomy-picture/src/components/PictureListItem/PictureListItem.module.css
+++ b/astronomy-picture/src/components/PictureListItem/PictureListItem.module.css
@@ -1,12 +1,14 @@
 .item {
     display: flex;
+    flex-direction: column;
     max-width: 100%;
-    background: #808080;
+    border: 1px solid black;
+    padding: 10px;
     border-radius: 20px;
 }
 
 .title {
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 600;
     font-family: Arial;
     font-style: oblique;
@@ -14,7 +16,7 @@
 }
 
 .date {
-    font-size: 20px;
+    font-size: 16px;
     font-weight: 900;
     font-family: Arial;
     max-width: 100%;
