--- a/astronomy-picture/src/App.module.css
+++ b/astronomy-picture/src/App.module.css
@@ -6,7 +6,7 @@
     gap: 40px;
     color: black;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 .potd {
