--- a/astronomy-picture/src/components/PictureListItem/PictureListItem.module.css
+++ b/astronomy-picture/src/components/PictureListItem/PictureListItem.module.css
@@ -1,7 +1,7 @@
 .item {
     display: flex;
     flex-direction: column;
-    max-width: 100%;
+    width: 100%;
     border: 1px solid black;
     padding: 10px;
     border-radius: 20px;
