--- a/astronomy-picture/src/components/PictureList/PictureList.module.css
+++ b/astronomy-picture/src/components/PictureList/PictureList.module.css
@@ -2,6 +2,17 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
+    gap: 10px;
+    max-width: 100%;
+}
+
+.column {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
     gap: 10px;
     max-width: 100%;
 }
